--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "material-ui": "^0.19.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-google-maps": "^7.1.0",
     "react-scripts": "1.0.11"
   },
   "scripts": {
