--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-google-maps": "^7.1.0",
+    "react-router-dom": "^4.1.2",
     "react-scripts": "1.0.11"
   },
   "scripts": {
