--- a/package.json
+++ b/package.json
@@ -1,21 +1,46 @@
 {
-  "name": "adventurespots",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "material-ui": "^0.19.0",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
-    "react-google-maps": "^7.1.0",
-    "react-router-dom": "^4.1.2",
-    "react-scripts": "1.0.11"
+  "name": "server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
+  "engines": {
+    "node": "8.2.1",
+    "npm": "5.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "start": "node server.js",
+    "server": "nodemon server.js",
+    "client": "npm run start --prefix client",
+    "watch-css": "npm run watch-css --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run -p watch-css\" \"npm run client\"",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/isaklafleur/adventurespots.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/isaklafleur/adventurespots/issues"
+  },
+  "homepage": "https://github.com/isaklafleur/adventurespots#readme",
+  "dependencies": {
+    "bcrypt": "^1.0.2",
+    "body-parser": "^1.17.2",
+    "concurrently": "^3.5.0",
+    "dotenv": "^4.0.0",
+    "express": "^4.15.4",
+    "formidable": "^1.1.1",
+    "gh-pages": "^1.0.0",
+    "jsonwebtoken": "^7.4.3",
+    "mongoose": "^4.11.7",
+    "node-fetch": "^1.7.2",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
+    "validator": "^8.1.0"
   },
   "devDependencies": {
+    "nodemon": "^1.11.0"
   }
 }
