--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,9 @@
   "proxy": {
     "/auth/*": {
       "target": "http://localhost:9000"
+    },
+    "/api/*": {
+      "target": "http://localhost:9000"
     }
   },
   "dependencies": {
