--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "8.2.1",
     "npm": "5.3.0"
   },
   "scripts": {
-    "start": "node server.js",
-    "server": "nodemon server.js",
+    "start": "node index.js",
+    "server": "nodemon index.js",
     "client": "npm run start --prefix client",
     "watch-css": "npm run watch-css --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run -p watch-css\" \"npm run client\"",
